--- a/makeButton/index.html
+++ b/makeButton/index.html
@@ -9,12 +9,8 @@
 </head>
 
 <body>
-
-    <button type="button" onclick="buttonClicked()">test button</button>
-
-    <br>
-
-    <svg width="500px" height="500px"></svg>
+  <button type = "button" onclick = "buttonClicked"> test button </button>
+    <svg width="800px" height="600px"></svg>
 
 </body>
 
